--- a/Recipe Finder.html
+++ b/Recipe Finder.html
@@ -1,1 +1,3 @@
+<script src="https://sdk.clarifai.com/js/clarifai-latest.js"></script>
 <script src="recipeFinder.js"></script>
+<script src="image.js"></script>
